force-app/main/default/objects/Opportunity/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <description>Captures the percentage discount offered on the opportunity.</description>
    <label>Discount Offered</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>