force-app/main/default/objects/Opportunity/fields/initialApproverId__c.field-meta.xml
<CustomField>
    <fullName>initialApproverId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Level 1 Approver responsible for reviewing high-value Opportunities.</description>
    <label>Initial Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>