force-app/main/default/objects/Opportunity/fields/rejectReason__c.field-meta.xml
<CustomField>
    <fullName>rejectReason__c</fullName>
    <description>Stores the default reason for opportunity rejection.</description>
    <label>Compelling Reason</label>
    <type>TextArea</type>
</CustomField>