force-app/main/default/objects/Opportunity/fields/submittedDate__c.field-meta.xml
<CustomField>
    <fullName>submittedDate__c</fullName>
    <description>Records the date the opportunity was submitted for approval.</description>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>