force-app/main/default/objects/Opportunity/fields/totalLineItems__c.field-meta.xml
<CustomField>
    <fullName>totalLineItems__c</fullName>
    <description>This will show the total line items available per this Opportunity</description>
    <label>Total Line Items</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>